@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-18T08:22:54Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 5 ],
+  "count_prev_day_inc" : 5,
+  "count_prev_day_dec" : 0,
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 3 ],
+  "uniques_prev_day_inc" : 3,
+  "uniques_prev_day_dec" : 0
+}
