@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-17T01:26:56Z",
+  "timestamp" : "2022-04-18T08:22:54Z",
   "count_outdated" : 1741,
   "uniques_outdated" : 320,
-  "count" : 1780,
-  "uniques" : 336,
+  "count" : 1785,
+  "uniques" : 339,
   "clones" : [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
