@@ -1,6 +1,6 @@
 {
-  "count": 39,
-  "uniques": 11,
+  "count": 44,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-04-13T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
