@@ -1,3 +1,9 @@
+2022-04-18T08:22:54Z:
+* notice: last 14d: all unq: 44 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 1741 320 / 1780 336
+* notice: next accum: outdated-all outdated-unq / all unq: 1741 320 / 1785 339
+* notice: prev json diff // prev day diff: unq all: +3 +5 / -0 -0 // +3 +5 / -0 -0
+
 2022-04-17T01:26:56Z:
 * notice: last 14d: all unq: 39 11
 * notice: prev accum: outdated-all outdated-unq / all unq: 1734 316 / 1780 336
